# Bridging-RGB-IR-Gap

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: yolow_v2_rgb_ir_flir_ircorrection_IR_RGB_Merr_Cons_DCTGhostV2.py
configs/ablation/: exp1_no_anchor1.py  exp1_no_anchor2.py  exp1_no_anchor3.py  exp2_mcons_mdis_fixed.py  exp2_only_mcons.py  exp2_only_mdis.py
configs/custom_dronevehicle/: dronevehicle_remove_whiteborders_640_val.py  dronevehicle_withwhiteboders_640_test.py  dronevehicle_withwhiteboders_640_val.py  run_train_dronevehicle_test.sh  run_train_dronevehicle_val.sh
configs/custom_flir/: yolow_v2_rgb_ir_flir.py  yolow_v2_rgb_ir_flir_class_specific_v1.py  yolow_v2_rgb_ir_flir_class_specific_v2.py  yolow_v2_rgb_ir_flir_no_update.py  yolow_v2_rgb_ir_flir_simplified.py  yolow_v2_rgb_ir_flir_simplified_tuned.py  (+4 more)
docs/: V8_HARD_ATTENTION_DESIGN.md  VERSION_COMPARISON_V6_V7_V8.md  环境安装说明.md
strategy/: LiteFFTIRBackbone.md  MultiLevelRGBIRFusion.md  MultiLevelRGBIRFusionV3.md  MultiScaleTextUpdateV4.md  TextGuidedIRCorrectionV4.md  TextGuidedRGBEnhancementV2.md  cursor_dronevehicle.md  cursor_gt.md  fangan.docx  fangan.markdown  ir_correction.markdown  ir_correction.md  newirlatex.md  newrgblatex.md  newtextlatex.md
tools/: count_params_merr_cons.py  fix_torch26_checkpoint.py  grid_search_fusion.py  merge_grid_search_results.py  profile_model.py  quick_test_fusion.sh  run_grid_search_4gpu.sh  test.py  train.py  vis_fusion_map.py
yolo_world/: __init__.py  simplified_register.py  text_only_register.py  trimodal_register.py
(+208 files in other folders)
