[build-system]
requires = ["setuptools","wheel","torch"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo_world"
version = "0.1.0"
description = "Bridging the RGB-IR Gap: Consensus and Discrepancy Modeling for Text-Guided Multispectral Detection"
readme = "README.md"
keywords = ["object detection", "multispectral", "RGB-IR", "text-guided"]
license = {text = "Apache License 2.0"}
requires-python = ">= 3.8"
dependencies = [
    "wheel",
    "torch>=1.11.0",
    "torchvision>=0.15.2",
    "transformers",
    "tokenizers",
    "numpy",
    "opencv-python",
    "supervision==0.19.0",
    "openmim",
    "mmcv==2.2.0",
    "mmdet==3.0.0",
    "mmengine==0.10.3",
]

[tool.setuptools]
package-dir = {"yolo_world" = "yolo_world"}
include-package-data = false
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["yolo_world*"]
